# cdm-util-scripts

./: .gitignore  README.md  catcher-wrangler.py  cdm-util-scripts.py  csv2catcher.py  ftp2catcher.py  printcdminfo.py  pyproject.toml  setup.cfg  setup.py
src/catcherdiff/: __init__.py  catcherdiff-report.html.j2  catcherdiff.py
src/catcherdiff/templates/: catcherdiff-report.html.j2
src/cdm_api/: __init__.py  cdm_api.py
src/cdm_util_scripts/: catchercombine.py  catchercombineterms.py  catcherdiff.py  catchertidy.py  cdm_api.py  cli.py  csv2catcher.py  csv2json.py  ftp2catcher.py  ftp_api.py  ftp_api2.py  ftpfields2catcher.py  ftpmdc2catcher.py  ftpstruct2catcher.py  ftptr2catcher.py  ftptransc2catcher.py  gui.py  gui_tk.py  json2csv.py  mdc2catcher.py  printcdminfo.py  printftpinfo.py  scanftpfields.py  scanftpschema.py  scanftpvocabs.py
src/cdm_util_scripts/templates/: base.html.j2  catcherdiff-report.html.j2  scanftpfields-report.html.j2  scanftpschema-report.html.j2  scanftpvocabs-report.html.j2
src/csv2catcher/: __init__.py  csv2catcher.py
src/csv2json/: __init__.py  csv2json.py
src/ftp2catcher/: __init__.py  ftp2catcher.py
src/ftpfields2catcher/: __init__.py  ftpfields2catcher.py
src/ftpmd2catcher/: __init__.py  ftpmd2catcher.py
src/ftptr2catcher/: __init__.py  ftptr2catcher.py
src/printcdminfo/: __init__.py  printcdminfo.py
src/printftpinfo/: __init__.py  printftpinfo.py
src/scanftpfields/: __init__.py  scanftpfields-report.html.j2  scanftpfields.py
src/scanftpvocabs/: __init__.py  scanftpvocabs.py
src/scanftpvocabs/templates/: scanftpvocabs-report.html.j2
tests/: conftest.py  fromthepage-tables-export_ryan-test-rows.csv  test_catchercombine.py  test_catchercombineterms.py  test_catcherdiff.py  test_catchertidy.py  test_cdm_api.py  test_csv2catcher.py  test_ftp2catcher.py  test_ftp_api.py  test_ftp_api2.py  test_ftpfields2catcher.py  test_ftpmd2catcher.py  test_ftpmdc2catcher.py  test_ftpstruct2catcher.py  test_ftptr2catcher.py  test_ftptransc2catcher.py  test_json2csv_csv2json.py  test_scanftpfields.py  test_scanftpschema.py  test_scanftpvocabs.py
tests/cassettes/catcherdiff/: collection_field_info  test_get_vocabs
tests/cassettes/cdm_api/: test_get_cdm_collection_field_vocab  test_get_cdm_item_info  test_get_cdm_page_pointers
tests/cassettes/csv2catcher/: cdm_records  test_reconcile_cdm_collection  test_reconcile_indexes_by_page  test_request_cdm_collection_object_records  test_request_collection_page_pointers
tests/cassettes/ftp2catcher/: test_find_cdm_objects  test_main
tests/cassettes/ftp_api/: ftp_manifest  test_extract_fields_from_html  test_extract_fields_from_tei  test_get_collection_manifest_url  test_get_ftp_collection  (+5 more)
(+57 files in other folders)
