[metadata]
name = cdm-util-scripts
version = 0.7.0
description = Ohio University CONTENTdm utility scripts
url = https://github.com/OU-Libraries/cdm-util-scripts
author = Nick Ver Steegh
author_email = versteeg@ohio.edu
license = GPLv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = cdm_util_scripts
install_requires =
    requests>=2
    jinja2>=3
    rich>=11
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
dev =
    pytest>=6
    pytest-cov>=3
    vcrpy>=4
    mypy>=0.9
    flake8>=3.9
    black

[options.package_data]
cdm_util_scripts =
    templates/*
    py.typed

[options.entry_points]
console_scripts =
    catcherdiff = cdm_util_scripts.catcherdiff:main
    csv2catcher = cdm_util_scripts.csv2catcher:main 
    csv2json = cdm_util_scripts.csv2json:main 
    ftp2catcher = cdm_util_scripts.ftp2catcher:main 
    ftpfields2catcher = cdm_util_scripts.ftpfields2catcher:main 
    ftptr2catcher = cdm_util_scripts.ftptr2catcher:main 
    printcdminfo = cdm_util_scripts.printcdminfo:main 
    printftpinfo = cdm_util_scripts.printftpinfo:main 
    scanftpfields = cdm_util_scripts.scanftpfields:main 
    scanftpvocabs = cdm_util_scripts.scanftpvocabs:main 

[flake8]
max-line-length = 160