[metadata]
name = cdm-util-scripts
version = 0.11.0
description = Ohio University CONTENTdm utility scripts
url = https://github.com/OU-Libraries/cdm-util-scripts
author = Nick Ver Steegh
license = GPLv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = cdm_util_scripts
install_requires =
    requests>=2
    jinja2>=3
    tqdm>=4
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
dev =
    pytest>=6
    pytest-cov>=3
    pytest-recording>=0.12
    vcrpy>=4
    urllib3<2
    mypy>=0.9
    flake8>=3.9
    black>=21

[options.package_data]
cdm_util_scripts =
    templates/*
    py.typed

[options.entry_points]
console_scripts =
    cdmutil = cdm_util_scripts.cli:main

[flake8]
max-line-length = 160
